--- a/index.html
+++ b/index.html
@@ -179,9 +179,9 @@
       <h2 class="text-2xl md:text-3xl font-semibold">Contact</h2>
       <p class="mt-2 text-slate-300">Open to freelance and full-time opportunities. Feel free to reach out:</p>
       <div class="mt-5 grid sm:grid-cols-3 gap-4 text-sm">
-        <a href="mailto:your.email@example.com" class="rounded-lg border border-slate-700 bg-slate-800 px-4 py-3 hover:border-slate-500">your.email@example.com</a>
-        <a href="https://linkedin.com/in/your-username" target="_blank" class="rounded-lg border border-slate-700 bg-slate-800 px-4 py-3 hover:border-slate-500">LinkedIn</a>
-        <a href="https://github.com/your-username" target="_blank" class="rounded-lg border border-slate-700 bg-slate-800 px-4 py-3 hover:border-slate-500">GitHub</a>
+        <a href="mailto:alfianpraa@gmail.com" class="rounded-lg border border-slate-700 bg-slate-800 px-4 py-3 hover:border-slate-500">alfianpraa@gmail.com</a>
+        <a href="https://linkedin.com/in/alfianpraa" target="_blank" class="rounded-lg border border-slate-700 bg-slate-800 px-4 py-3 hover:border-slate-500">LinkedIn</a>
+        <a href="https://instagram.com/alfianpraa" target="_blank" class="rounded-lg border border-slate-700 bg-slate-800 px-4 py-3 hover:border-slate-500">Instagram</a>
       </div>
     </div>
   </section>
